--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,29 @@
-@import url("https://fonts.googleapis.com/css2?family=Changa:wght@200;300;400;500;600;700;800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Changa&family=Monoton&display=swap');
 /* NAV BAR */
 @keyframes logo-change {
   0% {
-   
     color: white;
   }
   50% {
-   
     color: red;
     letter-spacing: 3px;
+    
   }
   100% {
-    
     color: white;
+    
   }
+}
+
+@keyframes zoom {
+  from{font-size: 20px;}
+  to {font-size: 40;}
+  
 }
 body {
   background-color: black;
   overflow-x: hidden;
-  overflow-y: hidden;
+ 
 }
 .App {
   display: flex;
@@ -45,7 +50,7 @@ body {
   transform: logo-change(1);
   animation: logo-change 4s ease-in-out alternate;
   animation-iteration-count: infinite;
-  font-weight: 800;
+  font-family: 'Monoton', cursive;
   text-align: center;
   font-size: 30px;
 }
@@ -61,35 +66,40 @@ body {
   gap: 5px;
   gap: 0px;
   position: relative;
+  transition: 5000ms;
 }
+
+
 
 .search-button {
   background-color: transparent;
   border: none;
-  height: 24px;
   color: red;
   position: absolute;
   right: 3px;
   cursor: pointer;
+  margin-top: 4px;
 }
 
 .search-input {
+  margin-top: 5px;
   height: 22px;
   width: 250px;
   background-color: transparent;
   border: red solid 2px;
-  transition: 1000ms;
+
   color: white;
   border-radius: 0px;
-  padding-left: 5px;
+  padding-left: 3px;
 }
-
 
 .nav-bar-right {
   display: flex;
   gap: 20px;
-  margin-right: 50px;
+  margin-right: 50px; 
 }
+
+
 
 .nav-bar-right p {
   transition: 500ms;
@@ -98,6 +108,7 @@ body {
 .nav-bar-right p:hover {
   cursor: pointer;
   color: red;
+ 
 }
 
 /* Home */
