--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Changa&family=Monoton&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Changa&family=Monoton&display=swap");
 /* NAV BAR */
 @keyframes logo-change {
   0% {
@@ -7,23 +7,33 @@
   50% {
     color: red;
     letter-spacing: 3px;
-    
   }
   100% {
     color: white;
-    
   }
 }
 
 @keyframes zoom {
-  from{font-size: 20px;}
-  to {font-size: 40;}
-  
+  from {
+    font-size: 20px;
+  }
+  to {
+    font-size: 40;
+  }
 }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 body {
   background-color: black;
   overflow-x: hidden;
- 
 }
 .App {
   display: flex;
@@ -36,11 +46,12 @@ body {
   align-items: center;
   justify-content: space-between;
   width: 100vw;
-  background-image: linear-gradient(black, rgba(0, 0, 0, 0));
+  background-image: linear-gradient(rgba(0, 0, 0, 0.653), rgba(0, 0, 0, 0));
   color: white;
   height: 50px;
   position: fixed;
   z-index: 1;
+  transition: 500ms;
 }
 
 .logo {
@@ -50,7 +61,7 @@ body {
   transform: logo-change(1);
   animation: logo-change 4s ease-in-out alternate;
   animation-iteration-count: infinite;
-  font-family: 'Monoton', cursive;
+  font-family: "Monoton", cursive;
   text-align: center;
   font-size: 30px;
 }
@@ -69,8 +80,6 @@ body {
   transition: 5000ms;
 }
 
-
-
 .search-button {
   background-color: transparent;
   border: none;
@@ -79,6 +88,7 @@ body {
   right: 3px;
   cursor: pointer;
   margin-top: 4px;
+  z-index: 1;
 }
 
 .search-input {
@@ -87,7 +97,8 @@ body {
   width: 250px;
   background-color: transparent;
   border: red solid 2px;
-
+  animation-name: fadeIn;
+  animation-duration: 1000ms;
   color: white;
   border-radius: 0px;
   padding-left: 3px;
@@ -96,10 +107,8 @@ body {
 .nav-bar-right {
   display: flex;
   gap: 20px;
-  margin-right: 50px; 
+  margin-right: 50px;
 }
-
-
 
 .nav-bar-right p {
   transition: 500ms;
@@ -108,7 +117,6 @@ body {
 .nav-bar-right p:hover {
   cursor: pointer;
   color: red;
- 
 }
 
 /* Home */
@@ -158,3 +166,138 @@ body {
   color: black;
   background-color: rgba(255, 255, 255, 0.86);
 }
+
+.add-movie {
+  position: absolute;
+  margin: 56px 0 0 12px;
+  width: 350px;
+  height: 200px;
+  gap: 10px;
+  background-color: rgba(0, 0, 0, 0.674);
+  border: red solid 1px;
+  opacity: 0;
+  animation-name: fadeIn;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
+  animation-timing-function: ease-in-out;
+}
+
+.add-movie input {
+  height: 30px;
+  width: 320px;
+  background-color: transparent;
+  border: solid red 1px;
+  color: white;
+  padding-left: 15px;
+  box-sizing: border-box;
+}
+
+.add-movie button {
+  width: 130px;
+  height: 30px;
+  background-color: rgba(255, 255, 255, 0.142);
+  color: white;
+  border-radius: 5px;
+  border: white 1px solid;
+  transition: 500ms;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  font-size: 16px;
+}
+.add-movie button:hover {
+  cursor: pointer;
+  background-color: rgba(255, 255, 255, 0.877);
+  color: black;
+}
+
+.add-movies-buttons {
+  display: flex;
+  gap: 10px;
+}
+.form {
+  width: 350px;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.addmovie-logo {
+  position: absolute;
+  margin: 6px 0px 0px -30px;
+  font-size: 20px;
+  color: red;
+}
+
+.fa-plus {
+  transition: 500ms;
+}
+.fa-plus:hover {
+  rotate: 90deg;
+}
+/* Movies Container */
+
+.movies-title {
+  font-weight: 400;
+  color: red;
+  margin: -130px 0px 0 690px;
+  font-size: 30px;
+  font-family: "Monoton", cursive;
+}
+
+.movies-container {
+  width: 98vw;
+  height: 500px;
+  margin-left: 6.5px;
+}
+
+/* Movie cart */
+.movie-cart {
+  
+  border: black 1px solid;
+  width: 300px;
+  height: 150px;
+  display: flex;
+  flex-direction: column;
+  color: white;
+  justify-content: space-between;
+  color: white;
+  font-size: 10px;
+  align-items: center;
+  opacity: 0.8;
+  transition: 500ms;
+  filter: grayscale(60%);
+}
+
+.movie-cart:hover{
+  filter: grayscale(0%);
+  opacity: 1;
+  cursor: pointer;
+}
+
+.movie-cart img {
+  height: 150px;
+  width: 300px;
+}
+
+
+.button-start{
+  position: absolute;
+  margin-top: 55px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  cursor: pointer;
+  border: none;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  font-size: 25px;
+  color: rgba(0, 0, 0, 0.829);
+  background-color: rgba(255, 255, 255, 0.838);
+}
+
